--- a/ModularityPoster.tex
+++ b/ModularityPoster.tex
@@ -50,8 +50,6 @@ Then, the third chapter briefly offers some perspectives to tackle those challen
 % A category with the (minimum) three required fields
 \category{D.2.8}{Software Engineering}{Data visualization, Software composition}[]
 
-\terms{???}
-
 \keywords{visualization, sensor, data, composition}
 
 \section{Introduction}
@@ -70,7 +68,8 @@ Visualization is the most common way to allow a human to induce information from
 through dashboards.
 Stephen Few define a dashboard as "a visual display of the most important
 information needed to achieve one or more objectives; consolidated and arranged
-on a single screen so the information can be monitored at a glance"\cite{few:dashboard} \\
+on a single screen so the information can be monitored at a glance"\cite{few:dashboard}
+
 % What kind of visualizations ?
 According to this definition, the visualizations used for this purpose should
 be a graphical representation of the data to treat. Apart from the well-known
@@ -82,8 +81,37 @@ assessment of a situation, or may offer one to interact with it with an aim of
 exploration, to search a more relevant data for each use, or to offer both an
 overview and a way to reduce the scope of the visualization.
 % Nb of dimensions
-Besides the ornamental criteria which only consist on a effect to change the aspect of the widget without impacting it capabilities (eg. 3D pie chart), the number of dimensions displayed play a part in the final use of the visualizations. Indeed, there may be one dimension (e.g. a simple display of your current speed on your car dashboard), two dimensions (as the generic charts above), or more (e.g. a country map with a color gradient to weight the population). 
+Besides the ornamental criteria which only consist on a effect to change the
+aspect of the widget without impacting it capabilities (eg. 3D pie chart), the
+number of dimensions displayed play a part in the final use of the visualizations.
+Indeed, there may be one dimension (e.g. a simple display of your current speed
+on your car dashboard), two dimensions (as the generic charts above), or more
+(e.g. a country map with a color gradient to weight the population). 
+Among the dimensions of a given visualization, one or several has to be used to
+categorize the input data. The other dimensions are the values to display.
+For example, a line chart represents values according to the time where
+a pie chart display, for each entry of a given categorization, the volume
+or percentage of matching data. The previously mentioned three dimension map
+displays a value, the amount of human being, in function of a complex category :
+the combination of a latitude and a longitude.
+In addition, due to ergonomic constraints, a visualization may impose a limit on
+(i) the number of different category displayable, e.g. a pie chart should
+have eight portions maximum;
+(ii) the number of value dimensions, e.g. a line chart should not represent more
+than ten lines to be readable
+(iii) on both category and value number, e.g. a bar chart should displays maximum
+five values per category, and the number of category should be limited according
+to the screen size so that the user can still distinguish each bar from the others.
+
 % For what kind of data ?
+Raw data produce by sensors are essentially timed values. The type of the value
+(eg. string, numerical, ...) and the unit of measurement in which it is expressed
+have an influence on the suitable possibilities of visualization. For example,
+given a window status sensor emitting either "opened" or "close" every minute,
+a pie chart would not be relevant.
+% Physical sensor / virtual
+
+% Data composition
 
 
 % For what purposes ?
