--- a/seb.sty
+++ b/seb.sty
@@ -27,6 +27,6 @@
 \newcommand{\iitem}[1]{\emph{(#1)}\xspace}
 
 
-\newcommand{\mypar}[1]{\paragraph{\textbf{#1}.}}
+\newcommand{\mypar}[1]{\paragraph{\textbf{#1}}}
 
 \newcommand{\mm}[1]{\textbf{\texttt{#1}}}
